--- a/week4ora2/week4ora2.csproj
+++ b/week4ora2/week4ora2.csproj
@@ -43,8 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BaseNames.cs" />
+    <Compile Include="Pizza.cs" />
+    <Compile Include="PizzaBase.cs" />
+    <Compile Include="PizzaTopping.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ToppingNames.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
